samples/_failures_safe/1761334358_146a8e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2c37d99.c: In function ‘next_token’:
./samples/SAFE/__tmp_b2c37d99.c:163:17: error: expected declaration or statement at end of input
  163 |                 char next = lexer->input[lexer->position];
      |                 ^~~~
./samples/SAFE/__tmp_b2c37d99.c:163:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b2c37d99.c:163:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b2c37d99.c:163:17: error: expected declaration or statement at end of input
